@@ -3,4 +3,4 @@ VOLUME /tmp
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} Datos.jar
 ENTRYPOINT ["java","-jar","/Datos.jar"]
-CMD java -XX:+PrintFlagsFinal $JAVA_OPTIONS -jar java-container.jar
+ENV JAVA_OPTS="-XX:PermSize=8192m -XX:MaxPermSize=4096m"
